UI(ChatDetails,Chatbox,ChatList): Fixed heights and widths for categorys in ChatDetails, enhanced widths for the entire dashboard, Removed scrollbar when it hasnt overflowed

--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,10 @@
 
 html,
 body {
-  font-size: 16px;
   background: #24242a;
   user-select: none;
+  scrollbar-width: thin;
+
 }
 
 button,
