--- a/src/components/ChatList.scss
+++ b/src/components/ChatList.scss
@@ -117,7 +117,7 @@
     display: flex;
     border-bottom-left-radius: 40px;
     background: #202329;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 83%;
     scroll-behavior: smooth;
     box-sizing: border-box;
