--- a/src/components/ChatboxDetails.scss
+++ b/src/components/ChatboxDetails.scss
@@ -1,11 +1,11 @@
 .chatboxdetails--container {
   background: #131313;
   height: 100%;
-  width: 450px;
+  max-width: 400px;
   padding: 25px;
   padding-top: 35px;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   h1 {
     color: #fff;
@@ -75,11 +75,10 @@
   }
 
   .chatboxdetails--gallery {
-    width: 300px;
-    height: 120px;
+    height: 145px;
     display: flex;
     margin-top: 20px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     img {
       height: 120px;
@@ -96,8 +95,8 @@
 
   .chatboxdetails--sharedfiles {
     width: 100%;
-    max-height: 260px;
-    overflow-x: scroll;
+    max-height: 290px;
+    overflow-y: auto;
     margin-top: 10px;
 
     .sharedfiles--file {
